[tool.poetry]
name = "mitm-http"
version = "0.1.0"
description = ""
authors = ["Valentin Alix <valentin-alix.850@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mitmproxy = "^10.4.2"
ankama-launcher-emulator = {git = "https://github.com/Valentin-alix/AnkamaLauncherEmulator"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
